--- a/landing.html
+++ b/landing.html
@@ -154,7 +154,7 @@
                         <a href="https://github.com/abadias618"><i class="fab fa-github"></i></a>
                     </div>
                     <div class="row container-fluid social animate__animated animate__fadeInUp">
-                        <a href="mailto: abadias@byui.edu"><i class="fas fa-envelope"></i></a>
+                        <a href="mailto: abdias@cs.utah.edu"><i class="fas fa-envelope"></i></a>
                     </div>
                     <div class="row container-fluid social animate__animated animate__fadeInUp">
                         <a href="https://www.linkedin.com/in/albertobaldiviezo/"><i class="fab fa-linkedin"></i></a>
@@ -172,8 +172,8 @@
             <h4 class="text">
                 I love to build, make, and craft software.<br>
                 I have done many different things throughout this ongoing learning process,
-                some of them are: web development, android applications, algorithm studies,
-                machine learning, computer vision, data science, and more.
+                some of them are: full-stack web development, android applications, algorithm studies, software QA,
+                machine learning, deep learning, computer vision, data science, and more.
             </h4>
         </div>
         <br>
@@ -188,6 +188,8 @@
                     <p>AAS Software Development</p>
                     <a href="https://www.byui.edu/">Brigham Young University - Idaho</a>
                     <p>BS Software Engineering</p>
+                    <a href="https://www.utah.edu/">University of Utah</a>
+                    <p>MS Artificial Intelligence</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6">
                     <i class="fas fa-archway"></i>
@@ -196,19 +198,19 @@
                         href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho
                         Business Solutions</a>
                     <p>Maintanance and Production of Software, Data Analytics, Reports Processing</p>
-                    <a href="https://www.ldsbc.edu/bookstore">LDSBC Bookstore</a>
-                    <p>Financial Data Processing, Customer Service</p>
+                    <a href="https://www.inforight.com/">InfoRight</a>
+                    <p>Software development for third party companies, Web Dev, Automation, Data Science</p>
                 </div>
             </div>
             <div class="row text-center padding">
                 <div class="col-sm-12 col-md-12">
                     <i class="fas fa-paint-brush"></i>
                     <h3>Skills</h3>
-                    <p>Java, Javascript, Python, C++, R, PHP, Git</p>
+                    <p>Java, Javascript, Python, C++, R, PHP</p>
                     <br>
-                    <p>Node.js, Express.js, EJS, Maven, Gradle, JUnit, 
-                        Linux(RHEL), Bootstrap, HTML-CSS-SASS, Shiny, Ggplot, 
-                        NLTK, Numpy, Pandas, Tensorflow, Keras, MSSQL, PostegreSQL, Firebase</p>
+                    <p>Git, Node.js, Express.js, EJS, Maven, Gradle, JUnit, 
+                        Linux, Bootstrap, HTML-CSS-SASS, Shiny, Ggplot, 
+                        NLTK, Numpy, Pandas, PyTorch, Tensorflow, Keras, MSSQL, PostegreSQL, Firebase</p>
                     <br>
                     <p>SCRUM, OOP, RESTful Web Services, MVC, Software Engineering Methodologies</p>
                 </div>
@@ -675,13 +677,13 @@
                 <div class="col-md-4">
                     <h5>Email:</h5>
                     <hr class="light">
-                    <p><a href="mailto: abadias@byui.edu">abadias@byui.edu</a></p>
+                    <p><a href="mailto: abdias@cs.utah.edu">abdias@cs.utah.edu</a></p>
                     <p><a href="mailto: abadias618@gmail.com.edu">abadias618@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Phone:</h5>
                     <hr class="light">
-                    <p>+1-385-881-8766</p>
+                    <p>+1-801-875-0504</p>
                 </div>
 
             </div>
