--- a/php.html
+++ b/php.html
@@ -93,7 +93,7 @@
                     <a href="https://github.com/abadias618"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="row container-fluid social animate__animated animate__fadeInUp">
-                    <a href="mailto: abadias@byui.edu"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto: abdias@cs.utah.edu"><i class="fas fa-envelope"></i></a>
                 </div>
                 <div class="row container-fluid social animate__animated animate__fadeInUp">
                     <a href="https://www.linkedin.com/in/albertobaldiviezo/"><i class="fab fa-linkedin"></i></a>
@@ -202,13 +202,13 @@
                 <div class="col-md-4">
                     <h5>Email:</h5>
                     <hr class="light">
-                    <p><a href="mailto: abadias@byui.edu">abadias@byui.edu</a></p>
+                    <p><a href="mailto: abdias@cs.utah.edu">abdias@cs.utah.edu</a></p>
                     <p><a href="mailto: abadias618@gmail.com.edu">abadias618@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Phone:</h5>
                     <hr class="light">
-                    <p>+1-385-881-8766</p>
+                    <p>+1-801-875-0504-8766</p>
                 </div>
 
             </div>
