--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="index.css">
+        <!-- reused style from http://aleclownes.com/2017/02/01/crt-display.html -->
+        <link rel="stylesheet" href="crt.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet"> 
+	
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>AbdiasB.- Software Engineer</title>
-        <!--Animante.css-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-        <!--My css-->
-        <link rel="stylesheet" href="index.css">
-        <style>
-            img {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                padding-top: 15%;
-                height: 200px;
-                width: 100px;
-            }
-        </style>
-    </head>
-    <body>
-        <meta http-equiv="refresh" content="2;URL=https://abadias618.github.io/Portfolio/landing.html">
         
-        <img class="animate__animated animate__fadeIn" src="images/logo.png" alt="logo">
+    </head>
+    <body >
+        <div class="navbar">
+            <a href="#Skills">Skills</a>
+            <a href="#Projects">Projects</a>
+            <a href="#Contact">Contact</a>
+        </div>
+        <div class="crt">
+            <h1>I'm Abdias Baldiviezo</h1>
+            <h2>and I'm a Software Engineer.</h2>
+        </div>
     </body>
 </html>
