--- a/index.html
+++ b/index.html
@@ -12,15 +12,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
-    <body >
-        <div class="navbar">
-            <a href="#Skills">Skills</a>
-            <a href="#Projects">Projects</a>
-            <a href="#Contact">Contact</a>
+    <body>
+        <div class="navbar no-flicker-crt">
+            <a href="skills.html">Skills</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
         </div>
-        <div class="crt">
-            <h1>I'm Abdias Baldiviezo</h1>
-            <h2>and I'm a Software Engineer.</h2>
+        <div>
+            <div class="typewriter crt">
+                <h1>I'm Abdias Baldiviezo</h1>
+                <h2>and I'm a Software Engineer.</h2>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="dotted-margin">
+            <p class="no-flicker-crt">
+                "By small and simple things are great things brought to pass..." (Alma)
+                <br>
+                <br>
+                I love to build, make, and craft software.
+                I have done many different things throughout this ongoing learning process, some of them are:
+                Software Development, Full-stack web development, Android applications, Statistics, Software QA,
+                Machine Learning, Deep Learning, Computer Vision, Data Science, and more.
+            </p>
+        </div>
+        <div class="two-cols">
+            <div class="no-flicker-crt col-item">
+                <h3>Education</h3>
+                <a href="https://www.ldsbc.edu/">LDS Business College</a>
+                <p>AAS Software Development</p>
+                <a href="https://www.byui.edu/">Brigham Young University - Idaho</a>
+                <p>BS Software Engineering</p>
+                <a href="https://www.utah.edu/">University of Utah</a>
+                <p>MS Artificial Intelligence (Spring 2024)</p>
+            </div>
+            <div class="no-flicker-crt col-item">
+                <h3>Experience</h3>
+                <a href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho
+                    Business Solutions</a>
+                <p>Software Maintanance and Production, Data Analytics, Automated Reports Processing</p>
+                <a href="https://www.inforight.com/">InfoRight</a>
+                <p>Software development for third party companies, Web Dev, Automation, Data Science.</p>
+                <a href="https://www.utah.edu/">University of Utah</a>
+                <p>Helped Teach, Administer, and Evaluate Python Courses</p>
+            </div>
         </div>
     </body>
 </html>
