--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,40 @@
         </div>
         <div>
             <div class="typewriter crt">
-                <h1>Loading...</h1>
+                <h1>Some things I've worked on.</h1>
             </div>
+            <div class="no-flicker-crt">
+                <p>_Projects</p>
+                <p>__2018</p>
+                <ul>
+                    <li>AirPnP << Group Project (Like AirBnB but for parking) << <span class="neon-text">Made with XAMARIN</span></li>
+                    <li>Data Structures-Search Algos << <span class="neon-text">JAVA / C++</span></li>
+                    <li>BlackJack - Four in a Row - Memory << Small Game Suite << <span class="neon-text">JAVA</span></li>
+                    <li>Ronin-Jack << Group Project (Running Game) << <span class="neon-text">Unity / C++</span></li>
+                    <li>Hand Command Recognition << Computer Vision into bash commands<< <span class="neon-text">Python / OpenCV</span></li>
+                </ul>
+                <p>__2019</p>
+                <ul>
+                    <li>Inventory WebApp << Keep Track of Inventory << <span class="neon-text">Bootstrap / PostgreSQL / AJAX</span></li>
+                    <li>OpenWeather API << A little Practice with APIs << <span class="neon-text">JAVA / gson</span></li>
+                    <li>Password-Vault << Password manager and storage << <span class="neon-text">PHP</span></li>
+                    <li>Budget App << Android Budgeting App << <span class="neon-text"> JAVA / FIREBASE</span></li>
+                    <li>Exploits << Stack Smashing, Array Index, Arc Injection, V-Table Spraying, Integer Overflow. << <span class="neon-text">C++</span></li>
+                </ul>
+                <p>__2020</p>
+                <ul>
+                    <li>Data Wrangling and Visualizations << Compendium of data viz projects << <span class="neon-text">R / ggplot</span></li>
+                    <li>Text Analysis App << Religious Text Analytics, Stemming, Tokenization, POS-Tagging, WordCloud << <span class="neon-text">Shiny.js / R</span></li>
+                    <li>Machine Learning with R<< some ML tecniques in R << <span class="neon-text">R</span></li>
+                    <li>Machine Learning Algorithms << implementations in Python << <span class="neon-text">Python</span></li>
+                    <li>QA WebApp << University's Customer Service Automated QA << <span class="neon-text">Node.js / Express / TeamDynamix API</span></li>
+                </ul>
+                <p>__2021</p>
+                <ul>
+                    <li> << << <span class="neon-text"></span></li>
+                </ul>
+            </div>
+            
         </div>
         <br>
         <br>
