--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,17 @@
                 </ul>
                 <p>__2021</p>
                 <ul>
-                    <li> << << <span class="neon-text"></span></li>
+                    <li>Mining Admin WebApp << Schedule Mining machinery operations << <span class="neon-text"> ReactJS / Node.js / MongoDB</span></li>
+                    <li>LeadGoblin << LinkedIn Lead Scraper << <span class="neon-text"> Javascript / React</span></li>
+                    <li>Geolocation Mining Operations << Geolocation Forms and data entry App << <span class="neon-text"> MS Powerapps / Datalake</span></li>
+                    <li>Budget Request and Planning Automation << Workflow automation WebApp << <span class="neon-text"> React / MSSQL / AzureAD</span></li>
+                    <li>Data Pipeline << Experimenting with GE and Airflow<< <span class="neon-text"> Great-Expectations / Apache Airflow</span></li>
+                </ul>
+                <p>__2022</p>
+                <ul>
+                    <li>Open Domain QA << NLP << <span class="neon-text"> Python / NLTK / FuzzyWuzzy</span></li>
+                    <li>Skin Leasion Classification << Deep Learning << <span class="neon-text">Pytorch</span></li>
+                    <li>Machine Learning Library << Personal implementations of ML Algorithms << <span class="neon-text">Python</span></li>
                 </ul>
             </div>
             
