--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,7 @@
                 <ul>Scikit-Learn</ul>
                 <ul>SciPy</ul>
                 <ul>Pandas</ul>
-                <ul>Pytorch</ul>
+                <ul>PyTorch</ul>
                 <ul>Tensorflow</ul>
                 <ul>NLTK</ul>
                 <ul>Flask</ul>
@@ -49,6 +49,7 @@
                 <ul>Shiny</ul>
                 <ul>plotly</ul>
                 <ul>knitr</ul>
+                <ul>HuggingFace</ul>
             </div>
             <div class="no-flicker-crt col-item">
                 <ul>Maven</ul>
@@ -68,6 +69,10 @@
                 <ul>AzureDB</ul>
                 <ul>MongoDB</ul>
                 <ul>Firebase</ul>
+                <ul>Apache Spark</ul>
+                <ul>Docker</ul>
+                <ul>AWS</ul>
+                <ul>TeamDynamix</ul>
             </div>
         </div>
         <div class="no-flicker-crt col-item">
@@ -89,6 +94,8 @@
                 <ul>CI/CD</ul>
                 <ul>QA</ul>
                 <ul>Version Control</ul>
+                <ul>Deep Learning Architectures</ul>
+                <ul>MLOps</ul>
             </div>
         </div>
 
