--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 "By small and simple things are great things brought to pass..." (Alma)
                 <br>
                 <br>
-                I love to build, make, and craft software.
+                I love to investigate, code, and create solutions.
                 I have done many different things throughout this ongoing learning process, some of them are:
-                Software Development, Full-stack web development, Android applications, Statistics, Software QA,
-                Machine Learning, Deep Learning, Computer Vision, Data Science, and more.
+                Full-stack Web Development, Android applications, Statistics, Software QA, Databases,
+                Machine Learning, AI, Computer Vision, Data Science, and more.
             </p>
         </div>
         <div class="two-cols">
@@ -45,17 +45,17 @@
                 <a href="https://www.byui.edu/">Brigham Young University - Idaho</a>
                 <p>BS Software Engineering</p>
                 <a href="https://www.utah.edu/">University of Utah</a>
-                <p>MS Artificial Intelligence (Spring 2024)</p>
+                <p>MS Artificial Intelligence (May 2024)</p>
             </div>
             <div class="no-flicker-crt col-item">
                 <h3>Experience</h3>
                 <a href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho
                     Business Solutions</a>
-                <p>Software Maintanance and Production, Data Analytics, Automated Reports Processing</p>
+                <p>Software Maintanance and Production, Data Analytics, Automated Reports Processing, APIs</p>
                 <a href="https://www.inforight.com/">InfoRight</a>
-                <p>Software development for third party companies, Web Dev, Automation, Data Science.</p>
+                <p>Software development for third party companies, Web Dev, Automation, Data Science</p>
                 <a href="https://www.utah.edu/">University of Utah</a>
-                <p>Helped Teach, Administer, and Evaluate Python Courses</p>
+                <p>Teach, Administer, and Evaluate Python Courses</p>
             </div>
         </div>
     </body>
