--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <a href="index.html">Home</a>
             <a href="skills.html">Skills</a>
             <a href="projects.html">Projects</a>
+            <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
         </div>
         <div>
             <div class="typewriter crt">
