--- a/skills.html
+++ b/skills.html
@@ -17,6 +17,7 @@
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
+            <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
         </div>
         <div>
             <div class="typewriter crt">
