--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
-    <body>
-        <div class="navbar no-flicker-crt">
+    <body class="no-flicker-crt">
+        <div class="navbar">
             <a href="skills.html">Skills</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
             <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
         </div>
         <div>
-            <div class="typewriter crt">
+            <div class="typewriter"> <!--crt class ommited here was causing a little lag-->
                 <h1>I'm Abdias Baldiviezo</h1>
                 <h3>and I'm a Software Engineer.</h3>
             </div>
@@ -28,7 +28,7 @@
         <br>
         <br>
         <div class="dotted-margin">
-            <p class="no-flicker-crt">
+            <p class="">
                 "By small and simple things are great things brought to pass..." (Alma)
                 <br>
                 <br>
@@ -39,7 +39,7 @@
             </p>
         </div>
         <div class="two-cols">
-            <div class="no-flicker-crt col-item">
+            <div class=" col-item">
                 <h3>Education</h3>
                 <a href="https://www.ldsbc.edu/">LDS Business College</a>
                 <p>AAS Software Development</p>
@@ -48,7 +48,7 @@
                 <a href="https://www.utah.edu/">University of Utah</a>
                 <p>MS Artificial Intelligence (May 2024)</p>
             </div>
-            <div class="no-flicker-crt col-item">
+            <div class=" col-item">
                 <h3>Experience</h3>
                 <a href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho
                     Business Solutions</a>
