--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
             <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
         </div>
         <div>
-            <div class="typewriter crt">
+            <div class="typewriter"> <!--crt class ommited here was causing a little lag-->
                 <h2>I've used these in different depths on projects, school, work, etc.</h2>
             </div>
         </div>
@@ -28,7 +28,7 @@
         <br>
         <br>
         <div class="four-cols">
-            <div class="no-flicker-crt col-item">
+            <div class="col-item">
                 <ul>Numpy</ul>
                 <ul>Scikit-Learn</ul>
                 <ul>SciPy</ul>
@@ -40,7 +40,7 @@
                 <ul>GreatExpectations</ul>
                 <ul>Conda</ul>
             </div>
-            <div class="no-flicker-crt col-item">
+            <div class=" col-item">
                 <ul>Matplotlib</ul>
                 <ul>Scrapy</ul>
                 <ul>Selenium</ul>
@@ -52,7 +52,7 @@
                 <ul>knitr</ul>
                 <ul>HuggingFace</ul>
             </div>
-            <div class="no-flicker-crt col-item">
+            <div class=" col-item">
                 <ul>Maven</ul>
                 <ul>JUnit</ul>
                 <ul>GSON</ul>
@@ -64,7 +64,7 @@
                 <ul>Sass</ul>
                 <ul>JQuery</ul>
             </div>
-            <div class="no-flicker-crt col-item">
+            <div class=" col-item">
                 <ul>MSSQL</ul>
                 <ul>PostgreSQL</ul>
                 <ul>AzureDB</ul>
@@ -76,11 +76,11 @@
                 <ul>TeamDynamix</ul>
             </div>
         </div>
-        <div class="no-flicker-crt col-item">
+        <div class=" col-item">
             <h3>Concepts, Practices, and Patterns</h3>
         </div>
         <div class="two-cols">
-            <div class="no-flicker-crt col-item">
+            <div class="col-item">
                 <ul>MVC</ul>
                 <ul>Singleton Pattern</ul>
                 <ul>Factory Method Pattern</ul>
@@ -88,7 +88,7 @@
                 <ul>Prototype Pattern</ul>
                 <ul>Abstract Method</ul>
             </div>
-            <div class="no-flicker-crt col-item">
+            <div class="col-item">
                 <ul>Scrum</ul>
                 <ul>RESTful services</ul>
                 <ul>OOP</ul>
