--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
             <p class="">
                 "By small and simple things are great things brought to pass..." (Alma)
                 <br>
-                <br>
                 I love to investigate, code, and create solutions.
                 I have done many different things throughout this ongoing learning process, some of them are:
-                Full-stack Web Development, Android applications, Statistics, Software QA, Databases,
-                Machine Learning, AI, Computer Vision, Data Science, and more.
+                Full-stack Web Development, Android applications, Statistics, Software QA, Databases, and Data Science.
+                Most Recetly I've focused on: Machine Learning Algos, Deep Learning Architectures, Computer Vision,
+                NLP, LLMs, RLHF, and of course business applications of all these.
+                <br>
+                Check out my list of <button type="button" autofocus><a href="projects.html">Projects</a></button>
             </p>
         </div>
         <div class="two-cols">
@@ -46,7 +48,7 @@
                 <a href="https://www.byui.edu/">Brigham Young University - Idaho</a>
                 <p>BS Software Engineering</p>
                 <a href="https://www.utah.edu/">University of Utah</a>
-                <p>MS Artificial Intelligence (May 2024)</p>
+                <p>MS Artificial Intelligence (Graduated!! May 2024)</p>
             </div>
             <div class=" col-item">
                 <h3>Experience</h3>
