--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,8 @@
                         <li>Viterbi, CKY, HMM, Dependency-Parsing, Semantic-Parsing << NLP << <span class="neon-text"> Study </span></li>
                         <li>Hyena Filters << Hierarchical Operator replacement for Attention in Transformers << <span class="neon-text"> PyTorch, Study</span></li>
                         <li>Creativity and AI << Philosophy of Mind << <span class="neon-text"> Study </span></li>
-                        
+                        <li>Multilingual Named Entity Recognition BIO-tagger << MT, Transfer-Learning << <span class="neon-text"> Pytorch, PAN-X, HuggingFace </span></li>
+                        <li>Stable Diffusion Decomposition << Computer Vision, Transformers << <span class="neon-text"> Pytorch, Diffusers, HuggingFace </span></li>
                     </ul>
                 </div>
             </div>
