--- a/skills.html
+++ b/skills.html
@@ -35,12 +35,13 @@
                 <ul>Pandas</ul>
                 <ul>PyTorch</ul>
                 <ul>Tensorflow</ul>
+                <ul>TensorRT</ul>
                 <ul>NLTK</ul>
                 <ul>Flask</ul>
                 <ul>GreatExpectations</ul>
                 <ul>Conda</ul>
             </div>
-            <div class=" col-item">
+            <div class="col-item">
                 <ul>Matplotlib</ul>
                 <ul>Scrapy</ul>
                 <ul>Selenium</ul>
@@ -48,11 +49,12 @@
                 <ul>dplyr</ul>
                 <ul>tidyr</ul>
                 <ul>Shiny</ul>
+                <ul>Seaborn</ul>
                 <ul>plotly</ul>
                 <ul>knitr</ul>
                 <ul>HuggingFace</ul>
             </div>
-            <div class=" col-item">
+            <div class="col-item">
                 <ul>Maven</ul>
                 <ul>JUnit</ul>
                 <ul>GSON</ul>
@@ -63,16 +65,18 @@
                 <ul>Bootstrap</ul>
                 <ul>Sass</ul>
                 <ul>JQuery</ul>
+                <ul>MS PowerApps</ul>
             </div>
-            <div class=" col-item">
+            <div class="col-item">
                 <ul>MSSQL</ul>
+                <ul>ClickHouse DB</ul>
                 <ul>PostgreSQL</ul>
                 <ul>AzureDB</ul>
                 <ul>MongoDB</ul>
                 <ul>Firebase</ul>
                 <ul>Apache Spark</ul>
                 <ul>Docker</ul>
-                <ul>AWS</ul>
+                <ul>AWS (EC2, S3, Lambda, SageMaker)</ul>
                 <ul>TeamDynamix</ul>
             </div>
         </div>
