ascii art and take neon-class out

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
             <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
         </div>
         <div>
-            <div class="typewriter crt">
-                <h1 class="neon-text">Let's get in touch.</h1>
+            <div class="typewriter no-flicker-crt">
+                <h1 class="no-flicker-crt">Let's get in touch.</h1>
             </div>
         </div>
         <br>
@@ -29,14 +29,14 @@
         <br>
         <br>
         <div class="two-cols dotted-margin">
-            <div class="neon-text col-item">
+            <div class="no-flicker-crt col-item">
                 <h5>Email:</h5>
                 <p><a href="mailto: abdias@cs.utah.edu">abdias@cs.utah.edu</a></p>
                 <p><a href="mailto: abadias618@gmail.com.edu">abadias618@gmail.com</a></p>
                 <br>
                 <a href="ABaldiviezoResume.pdf" target="_blank"> My Resume</a>
             </div>
-            <div class="neon-text col-item">
+            <div class="no-flicker-crt col-item">
                 <h5>Other:</h5>
                 <p>+1-801-875-0504</p>
                 <a href="https://www.linkedin.com/in/albertobaldiviezo/">linkedin</a>
