--- a/skills.html
+++ b/skills.html
@@ -39,7 +39,8 @@
                 <ul>NLTK</ul>
                 <ul>Flask</ul>
                 <ul>GreatExpectations</ul>
-                <ul>Conda</ul>
+                <ul>LangChain</ul>
+                <ul>MLflow</ul>
             </div>
             <div class="col-item">
                 <ul>Matplotlib</ul>
@@ -53,6 +54,7 @@
                 <ul>plotly</ul>
                 <ul>knitr</ul>
                 <ul>HuggingFace</ul>
+                <ul>Conda</ul>
             </div>
             <div class="col-item">
                 <ul>Maven</ul>
