--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <script src="./ascii_pic.js" defer></script>
     </head>
     <body class="no-flicker-crt">
         <div class="navbar">
@@ -22,7 +22,7 @@
         <div>
             <div class="typewriter"> <!--crt class ommited here was causing a little lag-->
                 <h1>I'm Abdias Baldiviezo</h1>
-                <h3>and I'm a Software Engineer.</h3>
+                <h3>and I'm a Software/ML/AI Engineer.</h3>
             </div>
         </div>
         <br>
@@ -40,6 +40,7 @@
                 Check out my list of <button type="button" autofocus><a href="projects.html">Projects</a></button>
             </p>
         </div>
+        
         <div class="two-cols">
             <div class=" col-item">
                 <h3>Education</h3>
@@ -52,6 +53,8 @@
             </div>
             <div class=" col-item">
                 <h3>Experience</h3>
+                <a href="">Bradford & Jensen & Dominguez</a>
+                <p>AI Business Integrations and analytics, Data Science consulting</p>
                 <a href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho
                     Business Solutions</a>
                 <p>Software Maintanance and Production, Data Analytics, Automated Reports Processing, APIs</p>
@@ -60,6 +63,11 @@
                 <a href="https://www.utah.edu/">University of Utah</a>
                 <p>Teach, Administer, and Evaluate Python Courses</p>
             </div>
+        </div>
+        <div class="dotted-margin">
+            This is Me (in ASCII)
+            <p id="picture">
+            </p>
         </div>
     </body>
 </html>
